tests/NormalTests/paczka1/small_fuzzy/51316081.err
Error in line 1: 5slmgqYu3xv A145 77,4
Error in line 12: wyVyBCQHlY A111 172,3
